--- a/365_Portal/t/admin.Master
+++ b/365_Portal/t/admin.Master
@@ -233,18 +233,21 @@
             <div class="nav-content float-right">
                 <ul class="navbar-nav">
                     <li class="nav-item icon dropdown"><a class="nav-link" id="navbarComments" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img src="../includes/Asset/images/comments.png" /><span class="badge">2</span></a>
+                        <%--<img src="../includes/Asset/images/comments.png" /><span class="badge">2</span></a>--%>
+                        <img src="../includes/Asset/images/comments.png" /></a>
 
                         <div class="dropdown-menu" aria-labelledby="navbarComments">
-                            <a class="dropdown-item unread" href="#">You just completed the <b>Principles Made Practical module</b></a>
+                            <a class="dropdown-item text-right font-weight-bold" href="#">Coming Soon...</a>
+                            <%--<a class="dropdown-item unread" href="#">You just completed the <b>Principles Made Practical module</b></a>
                             <a class="dropdown-item unread" href="#">You’re <b>halfway</b> at completing all your modules! Congrats!</a>
                             <a class="dropdown-item read" href="#">You just completed the <b>Staff Development topic</b></a>
-                            <a class="dropdown-item text-right font-weight-bold" href="#">Clear all</a>
+                            <a class="dropdown-item text-right font-weight-bold" href="#">Clear all</a>--%>
                         </div>
                     </li>
 
                     <li class="nav-item icon dropdown"><a class="nav-link" id="navbarNotification" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img src="../includes/Asset/images/notifications.png" /><span class="badge">2</span></a>
+                        <%--<img src="../includes/Asset/images/notifications.png" /><span class="badge">2</span></a>--%>
+                        <img src="../includes/Asset/images/notifications.png" /><asp:Label class="badge" runat="server" ID="lblNotiCount" Text=""/></a>
 
                         <div class="dropdown-menu" aria-labelledby="navbarNotification">
                             <a class="dropdown-item unread" href="#">You just completed the <b>Principles Made Practical module</b></a>
