--- a/365_Portal/t/admin.Master
+++ b/365_Portal/t/admin.Master
@@ -202,7 +202,7 @@
                     <li class="sidenav-item" id="dvSubMenu_Settings" onclick="location.href='settings.aspx';">
                         <a class="sidenav-link">My Account</a>
                     </li>
-                    <li class="sidenav-item" id="dvSubMenu_Notifications" onclick="location.href='settings.aspx';">
+                    <li class="sidenav-item" id="dvSubMenu_Notifications" onclick="location.href='MsgNotification.aspx';">
                         <a class="sidenav-link">Notifications</a>
                     </li>
                     <li class="sidenav-item" id="dvSubMenu_Roles" runat="server" visible="false" onclick="location.href='roles.aspx';">
@@ -250,7 +250,7 @@
 
                     <li class="nav-item icon dropdown"><a class="nav-link" id="navbarNotification" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <%--<img src="../includes/Asset/images/notifications.png" /><span class="badge">2</span></a>--%>
-                        <img src="../includes/Asset/images/notifications.png" /><asp:Label class="badge" runat="server" ID="lblNotiCount" Text=""/></a>
+                        <img src="../includes/Asset/images/notifications.png" onclick="location.href='MsgNotification.aspx';"/><asp:Label class="badge" runat="server" ID="lblNotiCount" Text=""/></a>
 
                         <div class="dropdown-menu" aria-labelledby="navbarNotification">
                             <a class="dropdown-item unread" href="#">You just completed the <b>Principles Made Practical module</b></a>
