--- a/365_Portal/INCLUDES/Asset/css/360.css
+++ b/365_Portal/INCLUDES/Asset/css/360.css
@@ -1480,7 +1480,7 @@ table tr.tDnD_whileDrag {
     }
 
     .button-color a {
-        display: block;
+        display: inline-block;
         font-weight: 400;
         text-align: center;
         vertical-align: middle;
