--- a/365_Portal/t/admin.Master
+++ b/365_Portal/t/admin.Master
@@ -239,7 +239,7 @@
             </a>--%>
             <div class="nav-content float-right">
                 <ul class="navbar-nav">
-                    <li class="nav-item icon dropdown"><a class="nav-link" id="navbarComments" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <li class="nav-item icon dropdown d-none"><a class="nav-link" id="navbarComments" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <%--<img src="../includes/Asset/images/comments.png" /><span class="badge">2</span></a>--%>
                         <img src="../includes/Asset/images/comments.png" /></a>
 
